<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navigation_audit"
        android:icon="@drawable/ic_shield_nav"
        android:title="@string/nav_audit" />
    <item
        android:id="@+id/navigation_monitor"
        android:icon="@drawable/ic_monitor"
        android:title="@string/nav_monitor" />
    <item
        android:id="@+id/navigation_alerts"
        android:icon="@drawable/ic_notifications"
        android:title="@string/nav_alerts" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
